--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@u-wave/react-vimeo": "^0.9.0",
     "react": "^16.13.1",
     "react-country-region-selector": "^2.1.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-player": "^2.6.0",
+    "react-scripts": "^3.4.2",
     "react-stripe-elements": "^6.1.2",
-    "react-zipcode": "^1.0.1"
+    "react-vimeo": "^2.0.0",
+    "react-zipcode": "^1.0.1",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
