--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-country-region-selector": "^2.1.0",
     "react-dom": "^16.13.1",
+    "react-notify-toast": "^0.5.1",
     "react-player": "^2.6.0",
     "react-scripts": "^3.4.2",
     "react-stripe-elements": "^6.1.2",
