--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@u-wave/react-vimeo": "^0.9.0",
+    "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-country-region-selector": "^2.1.0",
     "react-dom": "^16.13.1",
