--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@u-wave/react-vimeo": "^0.9.0",
     "jquery": "^3.5.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-country-region-selector": "^2.1.0",
     "react-dom": "^16.13.1",
